[package]
name = "mem_fuse"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.42", features = ["derive"] }
env_logger = "0.11.8"
fuser = "0.15.1"
indexmap = "2.10.0"
libc = "0.2.174"
log = "0.4.27"
lru = "0.12.3"
threadpool = "1.8.1"
tempfile = "3.10.1"
users = "0.11.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.0"
ntest = "0.9.3"
